--- a/obe/static/css/style.css
+++ b/obe/static/css/style.css
@@ -1000,20 +1000,20 @@ section {
 /*--------------------------------------------------------------
 # Book A Table
 --------------------------------------------------------------*/
-.book-a-table .php-email-form {
+.book-a-table .py-email-form {
   width: 100%;
 }
-.book-a-table .php-email-form .form-group {
+.book-a-table .py-email-form .form-group {
   padding-bottom: 8px;
 }
-.book-a-table .php-email-form .validate {
+.book-a-table .py-email-form .validate {
   display: none;
   color: red;
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
 }
-.book-a-table .php-email-form .error-message {
+.book-a-table .py-email-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -1021,10 +1021,10 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.book-a-table .php-email-form .error-message br + br {
+.book-a-table .py-email-form .error-message br + br {
   margin-top: 25px;
 }
-.book-a-table .php-email-form .sent-message {
+.book-a-table .py-email-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -1032,12 +1032,12 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.book-a-table .php-email-form .loading {
+.book-a-table .py-email-form .loading {
   display: none;
   text-align: center;
   padding: 15px;
 }
-.book-a-table .php-email-form .loading:before {
+.book-a-table .py-email-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -1049,7 +1049,7 @@ section {
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
 }
-.book-a-table .php-email-form input, .book-a-table .php-email-form textarea {
+.book-a-table .py-email-form input, .book-a-table .php-email-form textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
@@ -1057,22 +1057,22 @@ section {
   border-color: #625b4b;
   color: white;
 }
-.book-a-table .php-email-form input::-moz-placeholder, .book-a-table .php-email-form textarea::-moz-placeholder {
+.book-a-table .py-email-form input::-moz-placeholder, .book-a-table .py-email-form textarea::-moz-placeholder {
   color: #a49b89;
 }
-.book-a-table .php-email-form input::placeholder, .book-a-table .php-email-form textarea::placeholder {
+.book-a-table .py-email-form input::placeholder, .book-a-table .py-email-form textarea::placeholder {
   color: #a49b89;
 }
-.book-a-table .php-email-form input:focus, .book-a-table .php-email-form textarea:focus {
+.book-a-table .py-email-form input:focus, .book-a-table .py-email-form textarea:focus {
   border-color: #cda45e;
 }
-.book-a-table .php-email-form input {
+.book-a-table .py-email-form input {
   height: 44px;
 }
-.book-a-table .php-email-form textarea {
+.book-a-table .py-email-form textarea {
   padding: 10px 12px;
 }
-.book-a-table .php-email-form button[type=submit] {
+.book-a-table .py-email-form button[type=submit] {
   background: #cda45e;
   border: 0;
   padding: 10px 35px;
@@ -1080,7 +1080,7 @@ section {
   transition: 0.4s;
   border-radius: 50px;
 }
-.book-a-table .php-email-form button[type=submit]:hover {
+.book-a-table .py-email-form button[type=submit]:hover {
   background: #d3af71;
 }
 
@@ -1275,20 +1275,20 @@ section {
 .contact .info .open-hours, .contact .info .email, .contact .info .phone {
   margin-top: 40px;
 }
-.contact .php-email-form {
+.contact .py-email-form {
   width: 100%;
 }
-.contact .php-email-form .form-group {
+.contact .py-email-form .form-group {
   padding-bottom: 8px;
 }
-.contact .php-email-form .validate {
+.contact .py-email-form .validate {
   display: none;
   color: red;
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
 }
-.contact .php-email-form .error-message {
+.contact .py-email-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -1296,7 +1296,7 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.contact .php-email-form .sent-message {
+.contact .py-email-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -1304,12 +1304,12 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.contact .php-email-form .loading {
+.contact .py-email-form .loading {
   display: none;
   text-align: center;
   padding: 15px;
 }
-.contact .php-email-form .loading:before {
+.contact .py-email-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -1321,7 +1321,7 @@ section {
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
 }
-.contact .php-email-form input, .contact .php-email-form textarea {
+.contact .py-email-form input, .contact .py-email-form textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
@@ -1329,22 +1329,22 @@ section {
   border-color: #625b4b;
   color: white;
 }
-.contact .php-email-form input::-moz-placeholder, .contact .php-email-form textarea::-moz-placeholder {
+.contact .py-email-form input::-moz-placeholder, .contact .py-email-form textarea::-moz-placeholder {
   color: #a49b89;
 }
-.contact .php-email-form input::placeholder, .contact .php-email-form textarea::placeholder {
+.contact .py-email-form input::placeholder, .contact .py-email-form textarea::placeholder {
   color: #a49b89;
 }
-.contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
+.contact .py-email-form input:focus, .contact .py-email-form textarea:focus {
   border-color: #cda45e;
 }
-.contact .php-email-form input {
+.contact .py-email-form input {
   height: 44px;
 }
-.contact .php-email-form textarea {
+.contact .py-email-form textarea {
   padding: 10px 12px;
 }
-.contact .php-email-form button[type=submit] {
+.contact .py-email-form button[type=submit] {
   background: #cda45e;
   border: 0;
   padding: 10px 35px;
@@ -1352,7 +1352,7 @@ section {
   transition: 0.4s;
   border-radius: 50px;
 }
-.contact .php-email-form button[type=submit]:hover {
+.contact .py-email-form button[type=submit]:hover {
   background: #d3af71;
 }
 @-webkit-keyframes animate-loading {
